--- a/src/styles/ReusableComponents/project.css
+++ b/src/styles/ReusableComponents/project.css
@@ -161,3 +161,23 @@
     transform: translateY(0);
   }
 }
+
+/* .portfolio .swiper .frame {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  z-index: 2;
+
+  pointer-events: none;
+} 
+
+.portfolio .swiper .swiper-slide img.lazy {
+  display: block;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 0 ;
+  border-radius: 16px;
+} */
