--- a/src/styles/LandingPage/Careers.css
+++ b/src/styles/LandingPage/Careers.css
@@ -1,5 +1,4 @@
 .careers {
-  /* background: var(--mainColor20); */
   padding: 60px 24px;
   position: relative;
   z-index: 2;
@@ -101,7 +100,7 @@ textarea {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
-  font-size: .8rem; /* 1rem */
+  font-size: .8rem;
   font-weight: 400;
   line-height: 1.5;
   color: var(--bs-body-color);
@@ -190,8 +189,5 @@ textarea {
 button {
   border: none;
   background-color: transparent;
-}
-
-button {
   cursor: pointer;
 }
