--- a/src/styles/Products/product_details.css
+++ b/src/styles/Products/product_details.css
@@ -160,6 +160,17 @@
   width: 100% !important;
 }
 
+.productDetails .requestDemo {
+  position: sticky;
+  bottom: 40px;
+  right: 0%;
+  z-index: 10;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 24px 0;
+}
+
 .productDetails .requestDemo .btn {
   background: var(--linearGradient);
   background-size: 400%;
@@ -175,183 +186,6 @@
   color: var(--whiteColor);
   font-weight: bold;
   font-size: 16px;
-  outline: 4px solid rgba(0, 159, 111, 0.1882352941);
-  box-shadow: 0 0 0 8px rgba(0, 159, 111, 0.1882352941);
-}
-
-.fade {
-  transition: opacity 0.15s linear;
-}
-
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1055;
-  display: none;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
-  outline: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* @media (min-width: 576px) {
-    .modal {
-        --bs-modal-margin: 1.75rem;
-        --bs-modal-box-shadow: var(--bs-box-shadow);
-    }
-} */
-
-.show {
-  opacity: 1;
-  display: block;
-}
-
-.fade:not(.show) {
-  opacity: 0;
-}
-
-.modal-dialog {
-  position: relative;
-  width: auto;
-  margin: 0.5rem;
-  pointer-events: none;
-}
-
-.modal-dialog-centered {
-  display: flex;
-  align-items: center;
-  min-height: calc(100% - 0.5rem * 2);
-}
-
-@media (min-width: 576px) {
-  .modal-dialog {
-    max-width: 500px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-}
-
-.modal.fade .modal-dialog {
-  transition: transform 0.3s ease-out;
-  transform: translate(0, -50px);
-}
-
-.modal.show .modal-dialog {
-  transform: none;
-}
-
-.modal-content {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  color: #212529;
-  pointer-events: auto;
-  background-color: var(--whiteColor);
-  background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.175);
-  border-radius: 0.5rem;
-  outline: 0;
-}
-
-.modal .modal-content {
-  background: var(--whiteColor);
-  padding: 24px;
-  border-radius: 16px;
-  position: relative;
-}
-
-.modal .modal-content .btnClose {
-  position: absolute;
-  right: -12px;
-  top: -12px;
-  background: var(--darkColor);
-  color: var(--whiteColor);
-  width: 32px;
-  height: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  border: none;
-  outline: 2px solid var(--whiteColor);
-  font-family: "fontBold";
-  font-size: 16px;
-  z-index: 2;
-}
-
-.modal-body {
-  position: relative;
-  flex: 1 1 auto;
-  padding: 1rem;
-}
-
-.p-0 {
-  padding: 0 !important;
-}
-
-.modal .modal-content .form {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
-.modal .modal-content .form .form-group {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-}
-
-label {
-  display: inline-block;
-  text-align: start;
-}
-
-.modal .modal-content .form .form-group label {
-  color: var(--grayColor);
-  font-size: 13px;
-  font-weight: bold;
-}
-
-.modal .modal-content .form .form-group label span {
-  color: red;
-}
-
-.form-control {
-  display: block;
-  width: 100%;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-color: var(--whiteColor);
-  background-clip: padding-box;
-  border: 1px solid #dee2e6;
-  border-radius: 0.375rem;
-  transition:
-    border-color 0.15s ease-in-out,
-    box-shadow 0.15s ease-in-out;
-}
-
-.form-select,
-.form-control {
-  min-height: 48px;
-  background-color: var(--whiteColor);
-  color: var(--darkColor);
-  border-color: var(--lightGrayColor);
-}
-
-.modal .modal-content .form button {
-  width: -moz-fit-content;
-  width: fit-content;
-  min-width: 150px;
-  margin: 10px auto 0;
-  justify-content: center;
+  outline: 4px solid rgba(233, 32, 42, 0.1882352941);
+  box-shadow: 0 0 0 8px rgba(233, 32, 42, 0.1882352941);
 }
